Add google fonts

--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
         />
-
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Secular+One&display=swap"
+            rel="stylesheet"
+        />
         <title>Personal Portfolio</title>
     </head>
+
     <body>
         <header>
-            <img class="image" src="pp01.webp" />
+            <img class="header-image" src="pp01.webp" />
             <h1 class="name">Name Surname</h1>
+            <h1>About Me</h1>
             <p class="header-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
