--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             </div>
         </main>
         <footer>
-            <h1>Contact Me</h1>
+            <h1 class="footer-header">Contact Me</h1>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
